# datamo

./: .gitignore  README.md
cpp/: .gitignore  CMakeLists.txt  DataMo.pc.in  writer.cpp  writer.hpp
cpp/test/: test.cpp
front/: .gitignore  package-lock.json  package.json  server.js  tsconfig.json
front/src/back/: DataMoReader.js  Registration.js
front/src/front/: index.css  index.html  index.sass  index.ts  utils.ts
front/src/front/component/: graph.ts  raw.ts  status.ts
js/: DataMoReader.d.ts  DataMoReader.js  package.json
js/types/: DataMoReader.d.ts
python/: DataMoReader.py  DataMoWriter.py  __init__.py
